--- a/yes.html
+++ b/yes.html
@@ -13,7 +13,7 @@
 								
 				<img src="https://media.tenor.com/3g-vM1sZ2g4AAAAC/blush.gif" alt="">
 				<img src="https://media.tenor.com/RcwrsUZOlg8AAAAd/fsl-sign.gif" alt="">
-				<p class="ay">hehe chat mo na q<3</p>
+					<p class="ay">hehe chat mo na q</p>
 				<p class="ay">open na HAHAHAHA</p>
 				<img src="crykilig.jpeg" alt="">
 				</div>
